[package]
name = "media_browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
async-stream = "0.3.5"
axum = { version = "0.6.18", features = ["multipart", "tokio"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.17"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite"] }
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["macros"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.4.0", features = ["fs"] }
uuid = { version = "1.3.2", features = ["v4"] }
